change from get to getFirst for id in test